lib/src/xxhash_bindings.g.dart


  /// !
  /// @brief Resets an @ref XXH3_state_t with 64-bit seed to begin a new hash.
  ///
  /// @param statePtr The state struct to reset.
  /// @param seed     The 64-bit seed to alter the hash result predictably.
  ///
  /// @pre
  /// @p statePtr must not be `NULL`.
  ///
  /// @return @ref XXH_OK on success.
  /// @return @ref XXH_ERROR on failure.
  ///
  /// @note
  /// - This function resets `statePtr` and generate a secret from `seed`.
  /// - Call it before @ref XXH3_128bits_update().
  /// - Digest will be equivalent to `XXH3_128bits_withSeed()`.
  ///
  /// @see @ref streaming_example "Streaming Example"
  int XXH3_128bits_reset_withSeed(
    ffi.Pointer<XXH3_state_t> statePtr,
    int seed,
  ) {
    return _XXH3_128bits_reset_withSeed(
      statePtr,
      seed,
    );
  }

  late final _XXH3_128bits_reset_withSeedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<XXH3_state_t>,
              XXH64_hash_t)>>('XXH3_128bits_reset_withSeed');
  late final _XXH3_128bits_reset_withSeed = _XXH3_128bits_reset_withSeedPtr
      .asFunction<int Function(ffi.Pointer<XXH3_state_t>, int)>();

  /// !
  /// @brief Resets an @ref XXH3_state_t with secret data to begin a new hash.
  ///
  /// @param statePtr   The state struct to reset.
  /// @param secret     The secret data.
  /// @param secretSize The length of @p secret, in bytes.
  ///
  /// @pre
  /// @p statePtr must not be `NULL`.
  ///
  /// @return @ref XXH_OK on success.
  /// @return @ref XXH_ERROR on failure.
  ///
  /// `secret` is referenced, it _must outlive_ the hash streaming session.
  /// Similar to one-shot API, `secretSize` must be >= @ref XXH3_SECRET_SIZE_MIN,
  /// and the quality of produced hash values depends on secret's entropy
  /// (secret's content should look like a bunch of random bytes).
  /// When in doubt about the randomness of a candidate `secret`,
  /// consider employing `XXH3_generateSecret()` instead (see below).
  ///
  /// @see @ref streaming_example "Streaming Example"
  int XXH3_128bits_reset_withSecret(
    ffi.Pointer<XXH3_state_t> statePtr,
    ffi.Pointer<ffi.Void> secret,
    int secretSize,
  ) {
    return _XXH3_128bits_reset_withSecret(
      statePtr,
      secret,
      secretSize,
    );
  }

  late final _XXH3_128bits_reset_withSecretPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<XXH3_state_t>, ffi.Pointer<ffi.Void>,
              ffi.Size)>>('XXH3_128bits_reset_withSecret');
  late final _XXH3_128bits_reset_withSecret =
      _XXH3_128bits_reset_withSecretPtr.asFunction<
          int Function(
              ffi.Pointer<XXH3_state_t>, ffi.Pointer<ffi.Void>, int)>();

  /// !
  /// @brief Consumes a block of @p input to an @ref XXH3_state_t.
  ///
  /// Call this to incrementally consume blocks of data.
  ///
  /// @param statePtr The state struct to update.
  /// @param input The block of data to be hashed, at least @p length bytes in size.
  /// @param length The length of @p input, in bytes.
  ///
  /// @pre
  /// @p statePtr must not be `NULL`.
  ///
  /// @return @ref XXH_OK on success.
  /// @return @ref XXH_ERROR on failure.
  ///
  /// @note
  /// The memory between @p input and @p input + @p length must be valid,
  /// readable, contiguous memory. However, if @p length is `0`, @p input may be
  /// `NULL`. In C++, this also must be *TriviallyCopyable*.
  int XXH3_128bits_update(
    ffi.Pointer<XXH3_state_t> statePtr,
    ffi.Pointer<ffi.Void> input,
    int length,
  ) {
    return _XXH3_128bits_update(
      statePtr,
      input,
      length,
    );
  }

  late final _XXH3_128bits_updatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<XXH3_state_t>, ffi.Pointer<ffi.Void>,
              ffi.Size)>>('XXH3_128bits_update');
  late final _XXH3_128bits_update = _XXH3_128bits_updatePtr.asFunction<
      int Function(ffi.Pointer<XXH3_state_t>, ffi.Pointer<ffi.Void>, int)>();

  /// !
  /// @brief Returns the calculated XXH3 128-bit hash value from an @ref XXH3_state_t.
  ///
  /// @param statePtr The state struct to calculate the hash from.
  ///
  /// @pre
  /// @p statePtr must not be `NULL`.
  ///
  /// @return The calculated XXH3 128-bit hash value from that state.
  ///
  /// @note
  /// Calling XXH3_128bits_digest() will not affect @p statePtr, so you can update,
  /// digest, and update again.
  XXH128_hash_t XXH3_128bits_digest(
    ffi.Pointer<XXH3_state_t> statePtr,
  ) {
    return _XXH3_128bits_digest(
      statePtr,
    );
  }

  late final _XXH3_128bits_digestPtr = _lookup<
          ffi
          .NativeFunction<XXH128_hash_t Function(ffi.Pointer<XXH3_state_t>)>>(
      'XXH3_128bits_digest');
  late final _XXH3_128bits_digest = _XXH3_128bits_digestPtr.asFunction<
      XXH128_hash_t Function(ffi.Pointer<XXH3_state_t>)>();

  /// !
  /// @brief Check equality of two XXH128_hash_t values
  ///
  /// @param h1 The 128-bit hash value.
  /// @param h2 Another 128-bit hash value.
  ///
  /// @return `1` if `h1` and `h2` are equal.
  /// @return `0` if they are not.
  int XXH128_isEqual(
    XXH128_hash_t h1,
    XXH128_hash_t h2,
  ) {
    return _XXH128_isEqual(
      h1,
      h2,
    );
  }

  late final _XXH128_isEqualPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(XXH128_hash_t, XXH128_hash_t)>>(
      'XXH128_isEqual');
  late final _XXH128_isEqual = _XXH128_isEqualPtr.asFunction<
      int Function(XXH128_hash_t, XXH128_hash_t)>();

  /// !
  /// @brief Compares two @ref XXH128_hash_t
  ///
  /// This comparator is compatible with stdlib's `qsort()`/`bsearch()`.
  ///
  /// @param h128_1 Left-hand side value
  /// @param h128_2 Right-hand side value
  ///
  /// @return >0 if @p h128_1  > @p h128_2
  /// @return =0 if @p h128_1 == @p h128_2
  /// @return <0 if @p h128_1  < @p h128_2
  int XXH128_cmp(
    ffi.Pointer<ffi.Void> h128_1,
    ffi.Pointer<ffi.Void> h128_2,
  ) {
    return _XXH128_cmp(
      h128_1,
      h128_2,
    );
  }

  late final _XXH128_cmpPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>('XXH128_cmp');
  late final _XXH128_cmp = _XXH128_cmpPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  /// !
  /// @brief Converts an @ref XXH128_hash_t to a big endian @ref XXH128_canonical_t.
  ///
  /// @param dst  The @ref XXH128_canonical_t pointer to be stored to.
  /// @param hash The @ref XXH128_hash_t to be converted.
  ///
  /// @pre
  /// @p dst must not be `NULL`.
  /// @see @ref canonical_representation_example "Canonical Representation Example"
  void XXH128_canonicalFromHash(
    ffi.Pointer<XXH128_canonical_t> dst,
    XXH128_hash_t hash,
  ) {
    return _XXH128_canonicalFromHash(
      dst,
      hash,
    );
  }

  late final _XXH128_canonicalFromHashPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<XXH128_canonical_t>,
              XXH128_hash_t)>>('XXH128_canonicalFromHash');
  late final _XXH128_canonicalFromHash =
      _XXH128_canonicalFromHashPtr.asFunction<
          void Function(ffi.Pointer<XXH128_canonical_t>, XXH128_hash_t)>();

  /// !
  /// @brief Converts an @ref XXH128_canonical_t to a native @ref XXH128_hash_t.
  ///
  /// @param src The @ref XXH128_canonical_t to convert.
  ///
  /// @pre
  /// @p src must not be `NULL`.
  ///
  /// @return The converted hash.
  /// @see @ref canonical_representation_example "Canonical Representation Example"
  XXH128_hash_t XXH128_hashFromCanonical(
    ffi.Pointer<XXH128_canonical_t> src,
  ) {
    return _XXH128_hashFromCanonical(
      src,
    );
  }

  late final _XXH128_hashFromCanonicalPtr = _lookup<
      ffi.NativeFunction<
          XXH128_hash_t Function(
              ffi.Pointer<XXH128_canonical_t>)>>('XXH128_hashFromCanonical');
  late final _XXH128_hashFromCanonical = _XXH128_hashFromCanonicalPtr
      .asFunction<XXH128_hash_t Function(ffi.Pointer<XXH128_canonical_t>)>();
}

/// !
/// @brief Exit code for the streaming API.
abstract class XXH_errorcode {
  /// !< OK
  static const int XXH_OK = 0;

  /// !< Error
  static const int XXH_ERROR = 1;
}

typedef XXH32_hash_t = ffi.Uint32;
typedef DartXXH32_hash_t = int;

final class XXH32_state_s extends ffi.Opaque {}

/// !
/// @typedef struct XXH32_state_s XXH32_state_t
/// @brief The opaque state struct for the XXH32 streaming API.
///
/// @see XXH32_state_s for details.
/// @see @ref streaming_example "Streaming Example"
typedef XXH32_state_t = XXH32_state_s;

/// !
/// @brief Canonical (big endian) representation of @ref XXH32_hash_t.
final class XXH32_canonical_t extends ffi.Struct {
  /// !< Hash bytes, big endian
  @ffi.Array.multi([4])
  external ffi.Array<ffi.UnsignedChar> digest;
}

typedef XXH64_hash_t = ffi.Uint64;
typedef DartXXH64_hash_t = int;

final class XXH64_state_s extends ffi.Opaque {}

/// !
/// @brief The opaque state struct for the XXH64 streaming API.
///
/// @see XXH64_state_s for details.
/// @see @ref streaming_example "Streaming Example"
typedef XXH64_state_t = XXH64_state_s;

/// !
/// @brief Canonical (big endian) representation of @ref XXH64_hash_t.
final class XXH64_canonical_t extends ffi.Struct {
  @ffi.Array.multi([8])
  external ffi.Array<ffi.UnsignedChar> digest;
}

final class XXH3_state_s extends ffi.Opaque {}

/// !
/// @brief The opaque state struct for the XXH3 streaming API.
///
/// @see XXH3_state_s for details.
/// @see @ref streaming_example "Streaming Example"
typedef XXH3_state_t = XXH3_state_s;

/// !
/// @brief The return value from 128-bit hashes.
///
/// Stored in little endian order, although the fields themselves are in native
/// endianness.
final class XXH128_hash_t extends ffi.Struct {
  /// !< `value & 0xFFFFFFFFFFFFFFFF`
  @XXH64_hash_t()
  external int low64;

  /// !< `value >> 64`
  @XXH64_hash_t()
  external int high64;
}

/// Canonical representation
final class XXH128_canonical_t extends ffi.Struct {
  @ffi.Array.multi([16])
  external ffi.Array<ffi.UnsignedChar> digest;
}

const int XXH_VERSION_MAJOR = 0;

const int XXH_VERSION_MINOR = 8;

const int XXH_VERSION_RELEASE = 3;

const int XXH_VERSION_NUMBER = 803;

const int XXH3_SECRET_SIZE_MIN = 136;

const int XXH3_SECRET_DEFAULT_SIZE = 192;
